--- a/cis237hashtable/cis237hashtable.csproj
+++ b/cis237hashtable/cis237hashtable.csproj
@@ -41,6 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GenericHashMap.cs" />
+    <Compile Include="HashMap.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
